@@ -1,85 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0">
- <class>HttpServerSettings</class>
- <widget class="QWidget" name="HttpServerSettings">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>1406</width>
-    <height>274</height>
-   </rect>
-  </property>
-  <layout class="QFormLayout" name="formLayout">
-   <property name="fieldGrowthPolicy">
-    <enum>QFormLayout::ExpandingFieldsGrow</enum>
-   </property>
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
-    <number>0</number>
-   </property>
-   <item row="0" column="0">
-    <widget class="BuddyLabel" name="label_5">
-     <property name="text">
-      <string>Network &amp;interface:</string>
-     </property>
-     <property name="buddy">
-      <cstring>httpInterface</cstring>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="QComboBox" name="httpInterface"/>
-   </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="NoteLabel" name="label_4">
-     <property name="text">
-      <string>MPD usually only plays songs that are stored within its folders. Cantata contains a minimal HTTP server that can be used to serve other files to MPD. This, however, will only work whilst Cantata is running.</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0" colspan="2">
-    <widget class="NoteLabel" name="label_4b">
-     <property name="text">
-      <string>If you choose 'Local loopback' for 'Network interface', then MPD &lt;b&gt;must&lt;/b&gt; also be on this computer.</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0" colspan="2">
-    <spacer name="expandingSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>0</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-  </layout>
- </widget>
- <customwidgets>
-  <customwidget>
-   <class>BuddyLabel</class>
-   <extends>QLabel</extends>
-   <header>support/buddylabel.h</header>
-  </customwidget>
-  <customwidget>
-   <class>NoteLabel</class>
-   <extends>QLabel</extends>
-   <header>widgets/notelabel.h</header>
-  </customwidget>
- </customwidgets>
- <resources/>
- <connections/>
-</ui>
